# wiki-pension

./: CLAUDE.md  Dockerfile  README.md  __init__.py  actuary_checks.py  assumptions_sample.yaml  audit_qa.py  auth.py  base_rates.py  census.py  census_templates.py  config.py  config.toml  dateparse.py  db.py  dc.py  decrement.py  docker-compose.yml  excel_map_sample.yaml  mailer.py  mortality.csv  platform_app.py  pyproject.toml  reconcile.py  retirement_rates_age.csv  retirement_rates_service.csv  run_app.bat  run_platform.bat  smart_checks.py  store.py  table_store.py
app/: platform_app.py  requirements.txt  streamlit_app.py
config/: column_map_sample.yaml  sweep_sample.yaml
deploy/: README_諛고룷.md  firewall_open.bat  install_service_nssm.bat  run_server.bat
scripts/: generate_sample_census.py
src/dbo/: aux_forms.py  census.py  census_aux.py  census_review.py  census_templates.py  cli.py  discount.py  engine.py  experience.py  models.py  outputs.py  report.py  report_ppt.py
src/dbo/assets/: aux_templates.xlsx
src/dbo/platform/: __init__.py  db.py  seed.py  store.py
tests/: test_actuary_checks.py  test_audit_qa.py  test_aux_forms.py  test_census.py  test_config.py  test_dateparse.py  test_dc.py  test_engine.py  test_experience_withdrawal.py  test_integration.py  test_models.py  test_platform.py  test_rates_discount.py  test_reconcile.py  test_reproducibility.py  test_smart_checks.py  test_table_store.py
